# synddb

./: .env.defaults  .env.docker  .env.example  .env.local.example  .env.test  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_SUMMARY.md  EXTENSIBILITY.md  LICENSE  OUTDATED_PLAN_BRIDGE.md  OUTDATED_PLAN_MESSAGE_PASSING.md  OUTDATED_PLAN_SEQUENCER.md  OUTDATED_SPEC.md  PHASE2_SUMMARY.md  PLAN.md  PLAN_BRIDGE.md  PLAN_CONTRACTS.md  PLAN_CORE.md  PLAN_DEPLOYMENT.md  PLAN_EXTENSIONS.md  PLAN_MESSAGE_PASSING.md  PLAN_REPLICA.md  PLAN_SEQUENCER.md  PLAN_SIDECAR.md  PLAN_TODO.md  PLAN_VALIDATOR.md  PLAN_VALIDATORS.md  PLAN_VALIDATORS_EXAMPLES.md  README.md  REFACTOR_PREPARED_STATEMENTS.md  RELEASING.md  SPEC.md  SPEC_MESSAGE_BRIDGE.md  STYLUS_CASE_STUDY.md  TODO_RISC_ZERO.md  benchmark_post_optimization.txt  (+6 more)
.cargo/: audit.toml
contracts/stylus/attestation-verifier/: Cargo.toml
crates/gcp-attestation/: Cargo.toml
crates/gcp-attestation/src/: jwt.rs  lib.rs  verify.rs
crates/proof-service/: .gitignore  Cargo.toml  Dockerfile.risc0  README.md  build.rs  risc0.toml
crates/proof-service/src/: config.rs  main.rs  prover.rs
crates/proof-service/test-data/: samples_20251202_20_50_37.json
crates/synddb-benchmark/: Cargo.toml  PERFORMANCE_TUNING.md  README.md
crates/synddb-benchmark/src/: lib.rs  load_patterns.rs  main.rs  orderbook.rs  schema.rs  session_stress.rs
crates/synddb-benchmark/tests/: encoding_benchmark.rs  integration_test.rs
crates/synddb-bootstrap/: Cargo.toml
crates/synddb-bootstrap/src/: config.rs  drain.rs  error.rs  funding.rs  lib.rs  proof_client.rs  relayer_client.rs  state_machine.rs  submitter.rs
crates/synddb-bridge-validator/: Cargo.toml
crates/synddb-bridge-validator/src/: config.rs  error.rs  lib.rs  main.rs
crates/synddb-bridge-validator/tests/: e2e_test.rs  integration_test.rs
crates/synddb-chain-monitor/: Cargo.toml  README.md
crates/synddb-chain-monitor/examples/: README.md  deposit_handler.rs  multi_event_handler.rs  simple_monitor.rs
crates/synddb-chain-monitor/src/: config.rs  eth_client.rs  event_store.rs  events.rs  handler.rs  lib.rs  monitor.rs
crates/synddb-client/: CROSS_LANGUAGE_STRATEGY.md  Cargo.toml  FFI_VS_NATIVE_BINDINGS.md  HOW_RUST_FFI_WORKS.md  IMPLEMENTATION_SUMMARY.md  README.md  WHEN_TO_USE_PYO3_NEON.md  synddb.h
crates/synddb-client/bindings/: synddb.h
crates/synddb-client/examples/: README.md  auto_snapshot_example.rs  chain_monitor_example.rs  python_example.py  rust_example.rs  schema_snapshot_example.rs  snapshot_example.rs
crates/synddb-client/src/: attestation.rs  chain_handler.rs  config.rs  ddl_recovery.rs  ffi.rs  lib.rs  persistence.rs  python.rs  recovery.rs  retry.rs  sender.rs  session.rs  snapshot_sender.rs  stats.rs  tests.rs
crates/synddb-core/: Cargo.toml  README.md
crates/synddb-core/benches/: database_benchmarks.rs
crates/synddb-core/examples/: basic_usage.rs
crates/synddb-core/src/: config.rs  database.rs  extensions.rs  lib.rs  metrics.rs  prepared_statements.rs  types.rs  writes.rs
crates/synddb-e2e-fuzzer/: Cargo.toml
crates/synddb-e2e-fuzzer/proptest-regressions/: property_tests.txt
crates/synddb-e2e-fuzzer/src/: faults.rs  harness.rs  invariants.rs  lib.rs  property_tests.rs  replay.rs  scenarios.rs
crates/synddb-fuzzer/: Cargo.toml
crates/synddb-fuzzer/src/: generators.rs  grammar.rs  lib.rs  operations.rs  property_tests.rs  replay.rs
crates/synddb-relayer/: Cargo.toml  relayer.example.toml
crates/synddb-relayer/src/: config.rs  handlers.rs  main.rs  submitter.rs  tracker.rs  withdrawal.rs
crates/synddb-sequencer/: Cargo.toml  README.md
crates/synddb-sequencer/config/: default.yaml  example.yaml
crates/synddb-sequencer/src/: attestation.rs  batcher.rs  cbor_extractor.rs  config.rs  http_api.rs  http_errors.rs  inbox.rs  lib.rs  main.rs  metrics.rs  request_id.rs  signer.rs
crates/synddb-shared/: Cargo.toml
crates/synddb-shared/src/: gcs.rs  keys.rs  lib.rs  metrics.rs  parse.rs  prelude.rs  runtime.rs  telemetry.rs  utils.rs
crates/synddb-shared/tests/: cbor_integration.rs
crates/synddb-sidecar/: Cargo.toml  README.md
crates/synddb-sidecar/src/: main.rs
crates/synddb-storage/: Cargo.toml
crates/synddb-storage/src/: client.rs  config.rs  error.rs  lib.rs
crates/synddb-validator/: Cargo.toml  README.md
crates/synddb-validator/src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  validator.rs  validator_tests.rs
crates/synddb-wal-sequencer/: Cargo.toml
crates/synddb-wal-sequencer/src/: lib.rs  main.rs  storage_layer.rs  wal_monitor.rs  wal_reader.rs
examples/prediction-market/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  e2e-test.sh
examples/prediction-market-bridge/: Cargo.toml  SPEC.md
examples/prediction-market-bridge/src/: lib.rs  main.rs  schema.rs  store.rs  sync.rs  types.rs
examples/prediction-market/scripts/: dev-env.sh
examples/prediction-market/src/: app.rs  bridge.rs  chain_monitor.rs  http.rs  lib.rs  main.rs  market.rs  schema.rs  trading.rs
examples/price-oracle/: .gitignore  Dockerfile  README.md  SPEC.md  docker-compose.yml  e2e-test.sh  pyproject.toml  validator.Dockerfile
examples/price-oracle/app/: __init__.py  bridge.py  chain_monitor.py  fetcher.py  http.py  main.py  oracle.py  requirements.txt  schema.py
examples/price-oracle/schemas/: update-price.schema.json
examples/price-oracle/scripts/: dev-env.sh  setup-e2e.sh
examples/price-oracle/tests/: __init__.py  test_bridge_integration.py  test_e2e_bridge.py  test_failure_modes.py  test_oracle.py  test_validator_e2e.py
examples/price-oracle/validator/: Cargo.toml
services/proof-service/: Cargo.toml  Dockerfile  Dockerfile.risc0  README.md  build.rs
services/proof-service/deploy/: cloud-run.yaml
services/proof-service/src/: config.rs  main.rs  prover.rs  vkey.rs
tests/confidential-space/: .image-digest  Cargo.toml  Dockerfile  README.md  deploy.sh  setup-gcp.sh
tests/confidential-space/gcp-confidential-space/: Cargo.toml  README.md
tests/confidential-space/samples/: README.md
(+523 files in other folders)
