[workspace]
resolver = "2"
members = [
    "crates/synddb-benchmark",
    "crates/synddb-sequencer",
    "crates/synddb-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.90.0"
license = "MIT"
repository = "https://github.com/syndicate-io/synddb"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "backup", "session"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utils
rand = "0.8"
