[workspace]
resolver = "2"
members = [
  "crates/gcp-attestation",
  "crates/synddb-benchmark",
  "crates/synddb-bootstrap",
  "crates/synddb-relayer",
  "crates/synddb-sequencer",
  "crates/synddb-storage",
  "crates/synddb-validator",
  "crates/synddb-client",
  "crates/synddb-chain-monitor",
  "crates/synddb-shared",
  "crates/synddb-fuzzer",
  "crates/synddb-e2e-fuzzer",
  "examples/prediction-market",
  "examples/price-oracle/validator",
  "tests/e2e/runner",
  "tests/e2e-gcs/runner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.92.0"
license = "MIT"
repository = "https://github.com/syndicate-io/synddb"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Database
# TODO: Update to rusqlite 0.38+ when ready - has breaking changes:
# - Removed ToSql for u64 (use i64 instead)
# - Removed FromSql for usize (use i64 and convert)
rusqlite = { version = "0.32", features = ["bundled", "backup", "session"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = "0.0"

# Error handling
anyhow = "1.0"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "blocking"] }
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }

# Unix domain socket support
hyperlocal = "0.9"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
http-body-util = "0.1"

# Channels and concurrency
crossbeam-channel = "0.5"

# Enum utilities
strum = { version = "0.27", features = ["derive"] }

# Utils
rand = "0.9"
uuid = { version = "1.11", features = ["v4"] }
humantime-serde = "1.1"
humantime = "2"
hex = "0.4"
base64 = "0.22"
zstd = "0.13"
sha2 = "0.10"
sha3 = "0.10"
rsa = { version = "0.9", features = ["sha2"] }

# CBOR/COSE serialization
ciborium = "0.2"
coset = "0.3"
serde_bytes = "0.11"

# TOML configuration
toml = "0.8"

# Blockchain / Cryptography
alloy = { version = "1.1", features = [
  "provider-ws",
  "rpc-types",
  "sol-types",
] }
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
url = { version = "2.5", features = ["serde"] }
async-trait = "0.1"

# Google Cloud (official SDK)
google-cloud-storage = "1.5"
google-cloud-auth = "1.3"

# Metrics (using metrics facade with Prometheus exporter)
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
axum-prometheus = "0.8"

# OpenTelemetry / Distributed Tracing
opentelemetry = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.30"
tracing-stackdriver = { version = "0.10", features = ["opentelemetry"] }

[workspace.lints.rust]
# TEMPORARY allowances, remove before prod
missing_docs = "allow"
dead_code = "allow"

missing_debug_implementations = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }
unnameable_types = "warn"
unreachable_pub = "warn"
unused_must_use = "deny"
unused_qualifications = "warn"

[workspace.lints.clippy]
# avoid unexpected panics, these are not allowed in production
expect_used = "allow"  # TEMPORARY
map_unwrap_or = "deny"
unwrap_used = "allow"  # TEMPORARY

# TEMPORARY allowances. Revisit these if necessary
cognitive_complexity = "allow"

# warns
as_ptr_cast_mut = "warn"
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
fallible_impl_from = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_collect = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
non_send_fields_in_send_ty = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
option_if_let_else = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_else = "warn"
redundant_pub_crate = "warn"
significant_drop_in_scrutinee = "warn"
significant_drop_tightening = "allow"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
too_long_first_doc_paragraph = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"

# =============================================================================
# Release Profiles
# =============================================================================

[profile.release]
# Standard release optimizations
opt-level = 3
debug = false
strip = "symbols"

# Reproducible build profile - use with: cargo build --profile reproducible
# This profile prioritizes bit-for-bit reproducibility over build speed.
# Required for Confidential Space attestation verification.
[profile.reproducible]
inherits = "release"
# Single codegen unit ensures deterministic compilation order
codegen-units = 1
# LTO improves determinism by doing all optimization in one pass
lto = true
# Abort on panic simplifies the binary (no unwinding tables)
panic = "abort"
