[package]
name = "proof-service"
version = "0.1.0"
edition = "2021"
description = "RISC Zero GPU proof generation service for TEE attestation"
publish = false

# Standalone workspace: uses risc0-build to compile the zkVM guest program
# Kept separate to isolate RISC Zero SDK dependencies and simplify CI builds
[workspace]

[[bin]]
name = "proof-service"
path = "src/main.rs"

[features]
default = []
# Enable CUDA GPU acceleration for RISC Zero proving
cuda = ["risc0-zkvm/cuda"]
# Enable Metal GPU acceleration (macOS)
metal = ["risc0-zkvm/metal"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"

# RISC Zero SDK for local GPU proof generation
#
# RISC Zero compiles to a native CUDA binary that works directly on Cloud Run
# with L4 GPUs.
#
# Features:
# - Default: CPU proving (slower but portable)
# - cuda: Enable NVIDIA GPU acceleration (use for production)
# - metal: Enable Apple GPU acceleration (for local dev on Mac)
# - disable-dev-mode: Prevent RISC0_DEV_MODE from bypassing proof generation
risc0-zkvm = { version = "3.0.4", features = ["prove", "disable-dev-mode"] }

# RISC Zero Ethereum contracts integration
# Provides encode_seal() to properly format the seal with verifier selector prefix
# for on-chain verification via RiscZeroVerifierRouter
risc0-ethereum-contracts = "3.0.1"

# GCP attestation verification (for JWKS fetching and JWT parsing)
gcp-attestation = { path = "../gcp-attestation" }

# RISC Zero program types (PublicValuesStruct for decoding proof outputs)
gcp-cs-attestation-risc0-program = { path = "../synddb-bootstrap/risc0/program", default-features = false }

# Solidity types
alloy = { version = "1.0", default-features = false, features = ["sol-types"] }

# CLI and configuration
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client for JWKS fetching
reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
risc0-build = "3.0.4"
hex = "0.4"

[dev-dependencies]
serde_json = "1.0"

[package.metadata.risc0]
methods = ["../synddb-bootstrap/risc0/program"]
