[package]
name = "synddb-benchmark"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "synddb_benchmark"
path = "src/lib.rs"

[[bin]]
name = "orderbook-bench"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
