[package]
name = "synddb-benchmark"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
default-run = "orderbook-bench"

[lints]
workspace = true

[lib]
name = "synddb_benchmark"
path = "src/lib.rs"

[[bin]]
name = "orderbook-bench"
path = "src/main.rs"

[[bin]]
name = "session-stress-test"
path = "src/session_stress.rs"

[dependencies]
tokio = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
synddb-client = { path = "../synddb-client" }

[dev-dependencies]
synddb-shared = { path = "../synddb-shared" }
alloy = { workspace = true }
rusqlite = { workspace = true, features = ["bundled", "session"] }
