[package]
name = "synddb-bootstrap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Key bootstrapping for SyndDB TEE services"

[lints]
workspace = true

# humantime-serde is used via #[serde(with = "humantime_serde")] attribute
# which cargo-machete doesn't detect
[package.metadata.cargo-machete]
ignored = ["humantime-serde"]

[dependencies]
# SyndDB crates
synddb-shared = { path = "../synddb-shared" }
synddb-client = { path = "../synddb-client" }

# Async runtime
tokio = { workspace = true }

# HTTP client for proof service
reqwest = { workspace = true }
url = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

# Blockchain / Contract interaction
alloy = { workspace = true, features = [
  "signers",
  "signer-local",
  "provider-http",
  "network",
  "sol-types",
] }

# CLI configuration
clap = { workspace = true, features = ["env"] }
humantime-serde = { workspace = true }
humantime = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
