[package]
name = "synddb-chain-monitor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.cargo-machete]
ignored = ["humantime-serde"] # used in annotations

[lints]
workspace = true

[dependencies]
# Blockchain interaction
alloy = { workspace = true }
url = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Database for event persistence
rusqlite = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Async trait support
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
humantime-serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing-subscriber = { workspace = true }
