[package]
name = "synddb-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.cargo-machete]
ignored = ["humantime-serde"] # used in annotations

[lints]
workspace = true

[dependencies]
rusqlite = { workspace = true, features = ["bundled", "session", "hooks"] }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
reqwest = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }
uuid = { workspace = true }
humantime-serde = { workspace = true }
humantime = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
hyperlocal = { workspace = true }
hyper = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
ciborium = { workspace = true }
synddb-chain-monitor = { path = "../synddb-chain-monitor" }
synddb-shared = { path = "../synddb-shared" }
alloy = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
thiserror = { workspace = true }

[lib]
# Compile as both Rust library and C-compatible shared library
crate-type = ["rlib", "cdylib"]

[features]
default = []
# Enable C FFI exports (for cross-language support via ctypes/ffi-napi/cgo)
ffi = []
# Enable blockchain chain monitoring
chain-monitor = ["alloy", "async-trait"]

[dev-dependencies]
tracing-subscriber = { workspace = true }
