[package]
name = "synddb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Database
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Compression
zstd = { workspace = true }

# Cryptography
sha3 = { workspace = true }

# Config
config = { workspace = true }

# Utils
parking_lot = { workspace = true }
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "database_benchmarks"
harness = false
