[package]
name = "synddb-fuzzer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Property-based and grammar-based fuzzing for SyndDB SQLite replication"

[lints]
workspace = true

[dependencies]
# SyndDB crates
synddb-client = { path = "../synddb-client" }
synddb-shared = { path = "../synddb-shared" }
synddb-validator = { path = "../synddb-validator" }

# Database
rusqlite = { workspace = true }

# Property-based testing
proptest = "1.5"
proptest-derive = "0.5"

# Random generation for grammar-based testing
rand = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utils
tempfile = "3"
hex = { workspace = true }

[dev-dependencies]
# For running as tests
test-log = { version = "0.2", features = ["trace"] }
