[package]
name = "synddb-relayer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Gas funding relayer for SyndDB TEE keys"

[lints]
workspace = true

[dependencies]
# Workspace crates
synddb-shared = { path = "../synddb-shared" }

# Core async and CLI
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Blockchain / Contract interaction
alloy = { workspace = true, features = [
  "signers",
  "signer-local",
  "provider-http",
  "network",
  "sol-types",
] }

# Async utilities
async-trait = { workspace = true }

# HTTP client (for URL type)
reqwest = { workspace = true }
url = { workspace = true }

[[bin]]
name = "synddb-relayer"
path = "src/main.rs"
