[package]
name = "synddb-sequencer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.cargo-machete]
ignored = ["humantime-serde"] # used in annotations

[lints]
workspace = true

[dependencies]
# Core async and CLI
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }

# SQLite with Session Extension support
#rusqlite = { workspace = true, features = ["bundled", "backup", "session"] }

# Serialization and compression
serde = { workspace = true }
serde_yaml = { workspace = true }

# Configuration
# config = "0.14"
humantime-serde = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

# HTTP server for message API
axum = { workspace = true }

# Cryptography and signing
sha2 = { workspace = true }
hex = { workspace = true }

# DA layer clients (optional for now - will add when implementing)
# celestia-client = { version = "0.2", optional = true }
# eigenda-rust = { version = "0.1", optional = true }
# ipfs-api = { version = "0.11", optional = true }
# arweave-rs = { version = "0.1", optional = true }

# GCP TEE support (optional)
# gcp-auth = { version = "0.10", optional = true }
# google-cloud-secretmanager = { version = "0.6", optional = true }
# reqwest = { version = "0.11", features = ["json"], optional = true }

# Utilities
#parking_lot = "0.12"
#crossbeam-channel = "0.5"
#backoff = "0.4"

[features]
default = []
tee = []
celestia = []
eigenda = []
ipfs = []
arweave = []
