[package]
name = "synddb-sequencer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.cargo-machete]
ignored = ["humantime-serde"] # used in annotations

[lints]
workspace = true

[dependencies]
# Workspace crates
synddb-shared = { path = "../synddb-shared" }

# Core async and CLI
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration
humantime-serde = { workspace = true }
humantime = { workspace = true }

# Logging and tracing
tracing = { workspace = true }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }

# Cryptography and signing (Ethereum-compatible)
alloy = { workspace = true, features = ["signers", "signer-local"] }
hex = { workspace = true }

# Utilities
base64 = { workspace = true }
async-trait = { workspace = true }

# HTTP client (for attestation verification)
reqwest = { workspace = true }

# Compression
zstd = { workspace = true }

# Local SQLite storage
rusqlite = { workspace = true }

# Google Cloud Storage
google-cloud-storage = { workspace = true, optional = true }

[features]
default = []
tee = []
gcs = ["google-cloud-storage"]
celestia = []
eigenda = []
ipfs = []
arweave = []
