[package]
name = "synddb-sequencer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.cargo-machete]
ignored = ["humantime-serde"] # used in annotations

[lints]
workspace = true

[dependencies]
# Workspace crates
synddb-shared = { path = "../synddb-shared" }
gcp-attestation = { path = "../gcp-attestation" }
synddb-bootstrap = { path = "../synddb-bootstrap", optional = true }

# Core async and CLI
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }

# Configuration
humantime-serde = { workspace = true }
humantime = { workspace = true }

# Logging and tracing
tracing = { workspace = true }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Cryptography and signing (Ethereum-compatible)
alloy = { workspace = true, features = ["signers", "signer-local"] }
k256 = { workspace = true }
hex = { workspace = true }

# Utilities
async-trait = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true }

# HTTP client (for attestation verification)
reqwest = { workspace = true }

# Compression
zstd = { workspace = true }

# Metrics (using metrics facade with Prometheus exporter)
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
axum-prometheus = { workspace = true }

# Local SQLite storage
rusqlite = { workspace = true }

# Google Cloud Storage (always compiled for runtime transport selection)
google-cloud-storage = { workspace = true }
google-cloud-auth = { workspace = true }
bytes = "1"

[features]
default = []

# OpenTelemetry distributed tracing for Cloud Trace
otel = ["synddb-shared/otel"]

# TODO: Implement additional DA layer transports
# When implemented, dependencies should be non-optional for runtime selection.
# See PLAN_TODO.md for tracking and crates/synddb-sequencer/src/transport/
tee = ["dep:synddb-bootstrap"] # TEE-specific functionality (key bootstrapping)
celestia = []                  # Celestia DA layer
eigenda = []                   # EigenDA layer
ipfs = []                      # IPFS storage
arweave = []                   # Arweave permanent storage

[dev-dependencies]
tempfile = "3.24.0"
